// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card correctly applies the theme context className 1`] = `
<article
  className="card default orion-fusion-theme"
/>
`;

exports[`Card it should pass in visually hidden text 1`] = `
<article
  className="card default"
>
  <VisuallyHiddenText
    text="This is screen reader only text"
  />
</article>
`;

exports[`Card should render a default component 1`] = `
<article
  className="card default"
/>
`;

exports[`Card should use the default variant when prop is provided just like default 1`] = `
<article
  className="card default"
/>
`;

exports[`Card should use the raised variant when prop is provided 1`] = `
<article
  className="card raised"
/>
`;
